2005-11-10  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_fill): Applied patch #321185 from
	Jason Allen to fix memory leak.

2005-11-10  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (crux_paint_menuitem_gradient),
	(paint_outline), (paint_shadow), (paint_entry_shadow),
	(paint_menuitem_shadow), (draw_box):

	Use cairo to draw menu items and entry boxes

2005-11-02  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (crux_begin_paint),
	(paint_outline), (paint_shadow):

	Use cairo functions rather than gdk

2005-10-31  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box), (draw_slider):
	* engines/crux/src/eazel-theme-hacks.c:

	Remove various hacks

2005-10-30  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill),
	(clearlooks_draw_scrollbar_trough),
	(clearlooks_draw_scrollbar_stepper):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (draw_handle),
	(clearlooks_style_init_from_rc),
	(gdk_cairo_set_source_color_alpha), (draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Lots of tweaking of contrast and colors. Fixed the focus rings.

2005-10-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_handle): Fix memory leak. Patch from Mart Raudsepp (leio).

2005-10-10  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset), (clearlooks_draw_button),
	(clearlooks_draw_entry), (clearlooks_draw_menu_frame):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box),
	(draw_option), (draw_check), (clearlooks_style_init_from_rc):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Improved colors and such. Possibly other things, too :)